--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type='module' src='https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js'></script>
     <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 
-    <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="src\App.jsx"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
