--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <div class="CenterContent">
             <div class="img">
-              <img src="使用資料/建物配置.png" alt="見取り図">
+              <img src="images/position.png" alt="見取り図">
             </div>
           </div>
 
@@ -86,7 +86,7 @@
             <model-viewer 
             class="castle"
             alt="3D"
-            src="使用資料/城と堀.glb"
+            src="images/castle.glb"
             ios-src=""
             ar 
             camera-controls
@@ -129,7 +129,7 @@
             <div class="castle">
               <model-viewer 
               alt="3D"
-              src="使用資料/城と堀.glb"
+              src="images/castle.glb"
               ios-src=""
               ar 
               camera-controls
