--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <div class="CenterContent">
             <div class="img">
-              <img src="/Tanabe-Castle-WebApp/assets/position-BlBJ4zHg.png" alt="見取り図">
+              <img src="images/position.png" alt="見取り図">
             </div>
           </div>
 
