--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <div class="CenterContent">
             <div class="img">
-              <img src="images/position.png" alt="見取り図">
+              <img src="/Tanabe-Castle-WebApp/assets/position-BlBJ4zHg.png" alt="見取り図">
             </div>
           </div>
 
@@ -85,7 +85,7 @@
             <model-viewer 
             class="castle"
             alt="3D"
-            src="images/castle.glb"
+            src="public/images/castle.glb"
             ios-src=""
             ar 
             camera-controls
@@ -128,7 +128,7 @@
             <div class="castle">
               <model-viewer 
               alt="3D"
-              src="images/castle.glb"
+              src="public/images/castle.glb"
               ios-src=""
               ar 
               camera-controls
